obj/y.output
Nonterminals useless in grammar

    matchedStmt
    unmatchedStmt


Terminals unused in grammar

    STRCONST
    CHARCONST
    ERROR
    ILLEGAL_TOK
    OPER_AT
    OPER_INC
    OPER_DEC
    OPER_AND
    OPER_OR
    OPER_NOT


State 104 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declList

    2 declList: decl
    3         | declList decl

    4 decl: varDecl
    5     | funDecl

    6 $@1: ε

    7 funDecl: typeSpec ID $@1 LPARENTHESIS formalDeclListOpt RPARENTHESIS funBody

    8 typeSpec: INT
    9         | CHAR
   10         | VOID

   11 varDecl: typeSpec ID SEMICOLON
   12        | typeSpec ID LBRACKET INTCONST RBRACKET SEMICOLON

   13 formalDeclListOpt: ε
   14                  | formalDeclList

   15 formalDeclList: formalDecl
   16               | formalDecl COMMA formalDeclList

   17 formalDecl: typeSpec ID
   18           | typeSpec ID LBRACKET RBRACKET

   19 funBody: LBRACE localDeclListOpt statementListOpt RBRACE

   20 localDeclListOpt: ε
   21                 | localDeclList

   22 localDeclList: varDecl localDeclList
   23              | varDecl

   24 statementListOpt: ε
   25                 | statementList

   26 statementList: statement
   27              | statement statementList

   28 statement: compoundStmt
   29          | assignStmt SEMICOLON
   30          | condStmt
   31          | loopStmt
   32          | returnStmt SEMICOLON

   33 compoundStmt: LBRACE localDeclListOpt statementListOpt RBRACE

   34 assignStmt: var ASSIGN expression
   35           | expression

   36 returnStmt: RETURN
   37           | RETURN expression

   38 loopStmt: WHILE LPARENTHESIS expression RPARENTHESIS statement

   39 condStmt: IF LPARENTHESIS expression RPARENTHESIS statement
   40         | IF LPARENTHESIS expression RPARENTHESIS statement ELSE statement

   41 expression: addExpr
   42           | addExpr relop addExpr

   43 relop: LESSTHAN
   44      | LESSTHANEQ
   45      | GREATERTHAN
   46      | GREATERTHANEQ
   47      | EQ
   48      | NEQ

   49 addExpr: term
   50        | addExpr addop term

   51 addop: PLUS
   52      | MINUS

   53 term: factor
   54     | term mulop factor

   55 mulop: MULT
   56      | DIVIDE

   57 factor: INTCONST
   58       | var
   59       | funCallExpr
   60       | LPARENTHESIS expression RPARENTHESIS

   61 var: ID
   62    | ID LBRACKET expression RBRACKET

   63 funCallExpr: ID LPARENTHESIS argListOpt RPARENTHESIS

   64 argListOpt: ε
   65           | argList

   66 argList: expression
   67        | argList COMMA expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <strval> (258) 7 11 12 17 18 61 62 63
    INTCONST <value> (259) 12 57
    IF (260) 39 40
    ELSE (261) 40
    WHILE (262) 38
    RETURN (263) 36 37
    VOID (264) 10
    CHAR (265) 9
    INT (266) 8
    LBRACE (267) 19 33
    RBRACE (268) 19 33
    LPARENTHESIS (269) 7 38 39 40 60 63
    RPARENTHESIS (270) 7 38 39 40 60 63
    ASSIGN (271) 34
    LBRACKET (272) 12 18 62
    RBRACKET (273) 12 18 62
    PLUS (274) 51
    MINUS (275) 52
    DIVIDE (276) 56
    MULT (277) 55
    SEMICOLON (278) 11 12 29 32
    COMMA (279) 16 67
    LESSTHAN (280) 43
    LESSTHANEQ (281) 44
    GREATERTHAN (282) 45
    GREATERTHANEQ (283) 46
    EQ (284) 47
    NEQ (285) 48
    STRCONST (286)
    CHARCONST (287)
    ERROR (288)
    ILLEGAL_TOK (289)
    OPER_AT (290)
    OPER_INC (291)
    OPER_DEC (292)
    OPER_AND (293)
    OPER_OR (294)
    OPER_NOT (295)


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    program <node> (42)
        on left: 1
        on right: 0
    declList <node> (43)
        on left: 2 3
        on right: 1 3
    decl <node> (44)
        on left: 4 5
        on right: 2 3
    funDecl <node> (45)
        on left: 7
        on right: 5
    $@1 (46)
        on left: 6
        on right: 7
    typeSpec <node> (47)
        on left: 8 9 10
        on right: 7 11 12 17 18
    varDecl <node> (48)
        on left: 11 12
        on right: 4 22 23
    formalDeclListOpt <node> (49)
        on left: 13 14
        on right: 7
    formalDeclList <node> (50)
        on left: 15 16
        on right: 14 16
    formalDecl <node> (51)
        on left: 17 18
        on right: 15 16
    funBody <node> (52)
        on left: 19
        on right: 7
    localDeclListOpt <node> (53)
        on left: 20 21
        on right: 19 33
    localDeclList <node> (54)
        on left: 22 23
        on right: 21 22
    statementListOpt <node> (55)
        on left: 24 25
        on right: 19 33
    statementList <node> (56)
        on left: 26 27
        on right: 25 27
    statement <node> (57)
        on left: 28 29 30 31 32
        on right: 26 27 38 39 40
    compoundStmt <node> (58)
        on left: 33
        on right: 28
    assignStmt <node> (59)
        on left: 34 35
        on right: 29
    returnStmt <node> (60)
        on left: 36 37
        on right: 32
    loopStmt <node> (61)
        on left: 38
        on right: 31
    condStmt <node> (62)
        on left: 39 40
        on right: 30
    expression <node> (63)
        on left: 41 42
        on right: 34 35 37 38 39 40 60 62 66 67
    relop <node> (64)
        on left: 43 44 45 46 47 48
        on right: 42
    addExpr <node> (65)
        on left: 49 50
        on right: 41 42 50
    addop <node> (66)
        on left: 51 52
        on right: 50
    term <node> (67)
        on left: 53 54
        on right: 49 50 54
    mulop <node> (68)
        on left: 55 56
        on right: 54
    factor <node> (69)
        on left: 57 58 59 60
        on right: 53 54
    var <node> (70)
        on left: 61 62
        on right: 34 58
    funCallExpr <node> (71)
        on left: 63
        on right: 59
    argListOpt <node> (72)
        on left: 64 65
        on right: 63
    argList <node> (73)
        on left: 66 67
        on right: 65 67


State 0

    0 $accept: • program $end

    VOID  shift, and go to state 1
    CHAR  shift, and go to state 2
    INT   shift, and go to state 3

    program   go to state 4
    declList  go to state 5
    decl      go to state 6
    funDecl   go to state 7
    typeSpec  go to state 8
    varDecl   go to state 9


State 1

   10 typeSpec: VOID •

    $default  reduce using rule 10 (typeSpec)


State 2

    9 typeSpec: CHAR •

    $default  reduce using rule 9 (typeSpec)


State 3

    8 typeSpec: INT •

    $default  reduce using rule 8 (typeSpec)


State 4

    0 $accept: program • $end

    $end  shift, and go to state 10


State 5

    1 program: declList •
    3 declList: declList • decl

    VOID  shift, and go to state 1
    CHAR  shift, and go to state 2
    INT   shift, and go to state 3

    $default  reduce using rule 1 (program)

    decl      go to state 11
    funDecl   go to state 7
    typeSpec  go to state 8
    varDecl   go to state 9


State 6

    2 declList: decl •

    $default  reduce using rule 2 (declList)


State 7

    5 decl: funDecl •

    $default  reduce using rule 5 (decl)


State 8

    7 funDecl: typeSpec • ID $@1 LPARENTHESIS formalDeclListOpt RPARENTHESIS funBody
   11 varDecl: typeSpec • ID SEMICOLON
   12        | typeSpec • ID LBRACKET INTCONST RBRACKET SEMICOLON

    ID  shift, and go to state 12


State 9

    4 decl: varDecl •

    $default  reduce using rule 4 (decl)


State 10

    0 $accept: program $end •

    $default  accept


State 11

    3 declList: declList decl •

    $default  reduce using rule 3 (declList)


State 12

    7 funDecl: typeSpec ID • $@1 LPARENTHESIS formalDeclListOpt RPARENTHESIS funBody
   11 varDecl: typeSpec ID • SEMICOLON
   12        | typeSpec ID • LBRACKET INTCONST RBRACKET SEMICOLON

    LBRACKET   shift, and go to state 13
    SEMICOLON  shift, and go to state 14

    $default  reduce using rule 6 ($@1)

    $@1  go to state 15


State 13

   12 varDecl: typeSpec ID LBRACKET • INTCONST RBRACKET SEMICOLON

    INTCONST  shift, and go to state 16


State 14

   11 varDecl: typeSpec ID SEMICOLON •

    $default  reduce using rule 11 (varDecl)


State 15

    7 funDecl: typeSpec ID $@1 • LPARENTHESIS formalDeclListOpt RPARENTHESIS funBody

    LPARENTHESIS  shift, and go to state 17


State 16

   12 varDecl: typeSpec ID LBRACKET INTCONST • RBRACKET SEMICOLON

    RBRACKET  shift, and go to state 18


State 17

    7 funDecl: typeSpec ID $@1 LPARENTHESIS • formalDeclListOpt RPARENTHESIS funBody

    VOID  shift, and go to state 1
    CHAR  shift, and go to state 2
    INT   shift, and go to state 3

    $default  reduce using rule 13 (formalDeclListOpt)

    typeSpec           go to state 19
    formalDeclListOpt  go to state 20
    formalDeclList     go to state 21
    formalDecl         go to state 22


State 18

   12 varDecl: typeSpec ID LBRACKET INTCONST RBRACKET • SEMICOLON

    SEMICOLON  shift, and go to state 23


State 19

   17 formalDecl: typeSpec • ID
   18           | typeSpec • ID LBRACKET RBRACKET

    ID  shift, and go to state 24


State 20

    7 funDecl: typeSpec ID $@1 LPARENTHESIS formalDeclListOpt • RPARENTHESIS funBody

    RPARENTHESIS  shift, and go to state 25


State 21

   14 formalDeclListOpt: formalDeclList •

    $default  reduce using rule 14 (formalDeclListOpt)


State 22

   15 formalDeclList: formalDecl •
   16               | formalDecl • COMMA formalDeclList

    COMMA  shift, and go to state 26

    $default  reduce using rule 15 (formalDeclList)


State 23

   12 varDecl: typeSpec ID LBRACKET INTCONST RBRACKET SEMICOLON •

    $default  reduce using rule 12 (varDecl)


State 24

   17 formalDecl: typeSpec ID •
   18           | typeSpec ID • LBRACKET RBRACKET

    LBRACKET  shift, and go to state 27

    $default  reduce using rule 17 (formalDecl)


State 25

    7 funDecl: typeSpec ID $@1 LPARENTHESIS formalDeclListOpt RPARENTHESIS • funBody

    LBRACE  shift, and go to state 28

    funBody  go to state 29


State 26

   16 formalDeclList: formalDecl COMMA • formalDeclList

    VOID  shift, and go to state 1
    CHAR  shift, and go to state 2
    INT   shift, and go to state 3

    typeSpec        go to state 19
    formalDeclList  go to state 30
    formalDecl      go to state 22


State 27

   18 formalDecl: typeSpec ID LBRACKET • RBRACKET

    RBRACKET  shift, and go to state 31


State 28

   19 funBody: LBRACE • localDeclListOpt statementListOpt RBRACE

    VOID  shift, and go to state 1
    CHAR  shift, and go to state 2
    INT   shift, and go to state 3

    $default  reduce using rule 20 (localDeclListOpt)

    typeSpec          go to state 32
    varDecl           go to state 33
    localDeclListOpt  go to state 34
    localDeclList     go to state 35


State 29

    7 funDecl: typeSpec ID $@1 LPARENTHESIS formalDeclListOpt RPARENTHESIS funBody •

    $default  reduce using rule 7 (funDecl)


State 30

   16 formalDeclList: formalDecl COMMA formalDeclList •

    $default  reduce using rule 16 (formalDeclList)


State 31

   18 formalDecl: typeSpec ID LBRACKET RBRACKET •

    $default  reduce using rule 18 (formalDecl)


State 32

   11 varDecl: typeSpec • ID SEMICOLON
   12        | typeSpec • ID LBRACKET INTCONST RBRACKET SEMICOLON

    ID  shift, and go to state 36


State 33

   22 localDeclList: varDecl • localDeclList
   23              | varDecl •

    VOID  shift, and go to state 1
    CHAR  shift, and go to state 2
    INT   shift, and go to state 3

    $default  reduce using rule 23 (localDeclList)

    typeSpec       go to state 32
    varDecl        go to state 33
    localDeclList  go to state 37


State 34

   19 funBody: LBRACE localDeclListOpt • statementListOpt RBRACE

    ID            shift, and go to state 38
    INTCONST      shift, and go to state 39
    IF            shift, and go to state 40
    WHILE         shift, and go to state 41
    RETURN        shift, and go to state 42
    LBRACE        shift, and go to state 43
    LPARENTHESIS  shift, and go to state 44

    $default  reduce using rule 24 (statementListOpt)

    statementListOpt  go to state 45
    statementList     go to state 46
    statement         go to state 47
    compoundStmt      go to state 48
    assignStmt        go to state 49
    returnStmt        go to state 50
    loopStmt          go to state 51
    condStmt          go to state 52
    expression        go to state 53
    addExpr           go to state 54
    term              go to state 55
    factor            go to state 56
    var               go to state 57
    funCallExpr       go to state 58


State 35

   21 localDeclListOpt: localDeclList •

    $default  reduce using rule 21 (localDeclListOpt)


State 36

   11 varDecl: typeSpec ID • SEMICOLON
   12        | typeSpec ID • LBRACKET INTCONST RBRACKET SEMICOLON

    LBRACKET   shift, and go to state 13
    SEMICOLON  shift, and go to state 14


State 37

   22 localDeclList: varDecl localDeclList •

    $default  reduce using rule 22 (localDeclList)


State 38

   61 var: ID •
   62    | ID • LBRACKET expression RBRACKET
   63 funCallExpr: ID • LPARENTHESIS argListOpt RPARENTHESIS

    LPARENTHESIS  shift, and go to state 59
    LBRACKET      shift, and go to state 60

    $default  reduce using rule 61 (var)


State 39

   57 factor: INTCONST •

    $default  reduce using rule 57 (factor)


State 40

   39 condStmt: IF • LPARENTHESIS expression RPARENTHESIS statement
   40         | IF • LPARENTHESIS expression RPARENTHESIS statement ELSE statement

    LPARENTHESIS  shift, and go to state 61


State 41

   38 loopStmt: WHILE • LPARENTHESIS expression RPARENTHESIS statement

    LPARENTHESIS  shift, and go to state 62


State 42

   36 returnStmt: RETURN •
   37           | RETURN • expression

    ID            shift, and go to state 38
    INTCONST      shift, and go to state 39
    LPARENTHESIS  shift, and go to state 44

    $default  reduce using rule 36 (returnStmt)

    expression   go to state 63
    addExpr      go to state 54
    term         go to state 55
    factor       go to state 56
    var          go to state 64
    funCallExpr  go to state 58


State 43

   33 compoundStmt: LBRACE • localDeclListOpt statementListOpt RBRACE

    VOID  shift, and go to state 1
    CHAR  shift, and go to state 2
    INT   shift, and go to state 3

    $default  reduce using rule 20 (localDeclListOpt)

    typeSpec          go to state 32
    varDecl           go to state 33
    localDeclListOpt  go to state 65
    localDeclList     go to state 35


State 44

   60 factor: LPARENTHESIS • expression RPARENTHESIS

    ID            shift, and go to state 38
    INTCONST      shift, and go to state 39
    LPARENTHESIS  shift, and go to state 44

    expression   go to state 66
    addExpr      go to state 54
    term         go to state 55
    factor       go to state 56
    var          go to state 64
    funCallExpr  go to state 58


State 45

   19 funBody: LBRACE localDeclListOpt statementListOpt • RBRACE

    RBRACE  shift, and go to state 67


State 46

   25 statementListOpt: statementList •

    $default  reduce using rule 25 (statementListOpt)


State 47

   26 statementList: statement •
   27              | statement • statementList

    ID            shift, and go to state 38
    INTCONST      shift, and go to state 39
    IF            shift, and go to state 40
    WHILE         shift, and go to state 41
    RETURN        shift, and go to state 42
    LBRACE        shift, and go to state 43
    LPARENTHESIS  shift, and go to state 44

    $default  reduce using rule 26 (statementList)

    statementList  go to state 68
    statement      go to state 47
    compoundStmt   go to state 48
    assignStmt     go to state 49
    returnStmt     go to state 50
    loopStmt       go to state 51
    condStmt       go to state 52
    expression     go to state 53
    addExpr        go to state 54
    term           go to state 55
    factor         go to state 56
    var            go to state 57
    funCallExpr    go to state 58


State 48

   28 statement: compoundStmt •

    $default  reduce using rule 28 (statement)


State 49

   29 statement: assignStmt • SEMICOLON

    SEMICOLON  shift, and go to state 69


State 50

   32 statement: returnStmt • SEMICOLON

    SEMICOLON  shift, and go to state 70


State 51

   31 statement: loopStmt •

    $default  reduce using rule 31 (statement)


State 52

   30 statement: condStmt •

    $default  reduce using rule 30 (statement)


State 53

   35 assignStmt: expression •

    $default  reduce using rule 35 (assignStmt)


State 54

   41 expression: addExpr •
   42           | addExpr • relop addExpr
   50 addExpr: addExpr • addop term

    PLUS           shift, and go to state 71
    MINUS          shift, and go to state 72
    LESSTHAN       shift, and go to state 73
    LESSTHANEQ     shift, and go to state 74
    GREATERTHAN    shift, and go to state 75
    GREATERTHANEQ  shift, and go to state 76
    EQ             shift, and go to state 77
    NEQ            shift, and go to state 78

    $default  reduce using rule 41 (expression)

    relop  go to state 79
    addop  go to state 80


State 55

   49 addExpr: term •
   54 term: term • mulop factor

    DIVIDE  shift, and go to state 81
    MULT    shift, and go to state 82

    $default  reduce using rule 49 (addExpr)

    mulop  go to state 83


State 56

   53 term: factor •

    $default  reduce using rule 53 (term)


State 57

   34 assignStmt: var • ASSIGN expression
   58 factor: var •

    ASSIGN  shift, and go to state 84

    $default  reduce using rule 58 (factor)


State 58

   59 factor: funCallExpr •

    $default  reduce using rule 59 (factor)


State 59

   63 funCallExpr: ID LPARENTHESIS • argListOpt RPARENTHESIS

    ID            shift, and go to state 38
    INTCONST      shift, and go to state 39
    LPARENTHESIS  shift, and go to state 44

    $default  reduce using rule 64 (argListOpt)

    expression   go to state 85
    addExpr      go to state 54
    term         go to state 55
    factor       go to state 56
    var          go to state 64
    funCallExpr  go to state 58
    argListOpt   go to state 86
    argList      go to state 87


State 60

   62 var: ID LBRACKET • expression RBRACKET

    ID            shift, and go to state 38
    INTCONST      shift, and go to state 39
    LPARENTHESIS  shift, and go to state 44
